logs/ulif.rest.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2newlatex.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xml.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/docutils'...
Compiling './lib/python3.5/site-packages/docutils/core.py'...
***   File "./lib/python3.5/site-packages/docutils/core.py", line 208
    except SystemExit, error:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/docutils/frontend.py'...
***   File "./lib/python3.5/site-packages/docutils/frontend.py", line 65
    except ValueError, error:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/docutils/io.py'...
***   File "./lib/python3.5/site-packages/docutils/io.py", line 104
    except (UnicodeError, LookupError), error:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docutils/languages'...
Compiling './lib/python3.5/site-packages/docutils/nodes.py'...
***   File "./lib/python3.5/site-packages/docutils/nodes.py", line 454
    raise TypeError, ('element index must be an integer, a slice, or '
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Compiling './lib/python3.5/site-packages/docutils/parsers/rst/directives/__init__.py'...
***   File "./lib/python3.5/site-packages/docutils/parsers/rst/directives/__init__.py", line 163
    except AttributeError, error:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/docutils/parsers/rst/directives/html.py'...
***   File "./lib/python3.5/site-packages/docutils/parsers/rst/directives/html.py", line 85
    except utils.NameValueError, detail:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/docutils/parsers/rst/directives/misc.py'...
***   File "./lib/python3.5/site-packages/docutils/parsers/rst/directives/misc.py", line 51
    except IOError, error:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/docutils/parsers/rst/directives/tables.py'...
***   File "./lib/python3.5/site-packages/docutils/parsers/rst/directives/tables.py", line 142
    except SystemMessagePropagation, detail:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Compiling './lib/python3.5/site-packages/docutils/parsers/rst/roles.py'...
***   File "./lib/python3.5/site-packages/docutils/parsers/rst/roles.py", line 113
    except AttributeError, error:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/docutils/parsers/rst/states.py'...
***   File "./lib/python3.5/site-packages/docutils/parsers/rst/states.py", line 1103
    attribution_pattern = re.compile(ur'(---?(?!-)|\u2014) *(?=[^ \n])')
                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/readers/python'...
Compiling './lib/python3.5/site-packages/docutils/readers/python/moduleparser.py'...
***   File "./lib/python3.5/site-packages/docutils/readers/python/moduleparser.py", line 759
    print parse_module(content, filename).pformat()
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/docutils/statemachine.py'...
***   File "./lib/python3.5/site-packages/docutils/statemachine.py", line 245
    except TransitionCorrection, exception:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docutils/transforms'...
Compiling './lib/python3.5/site-packages/docutils/utils.py'...
***   File "./lib/python3.5/site-packages/docutils/utils.py", line 310
    except (ValueError, TypeError), detail:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Compiling './lib/python3.5/site-packages/docutils/writers/latex2e/__init__.py'...
***   File "./lib/python3.5/site-packages/docutils/writers/latex2e/__init__.py", line 1854
    print 'nested tables are not supported'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/docutils/writers/newlatex2e'...
Compiling './lib/python3.5/site-packages/docutils/writers/newlatex2e/__init__.py'...
***   File "./lib/python3.5/site-packages/docutils/writers/newlatex2e/__init__.py", line 686
    except (nodes.SkipChildren, nodes.SkipSiblings), instance:
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Compiling './lib/python3.5/site-packages/roman.py'...
***   File "./lib/python3.5/site-packages/roman.py", line 43
    raise OutOfRangeError, "number out of range (must be 1..4999)"
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ulif'...
Listing './lib/python3.5/site-packages/ulif/rest'...
Compiling './lib/python3.5/site-packages/ulif/rest/directives_plain.py'...
***   File "./lib/python3.5/site-packages/ulif/rest/directives_plain.py", line 128
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ulif/rest/tests'...
Compiling './lib/python3.5/site-packages/ulif/rest/tests/DocutilsTestSupport.py'...
***   File "./lib/python3.5/site-packages/ulif/rest/tests/DocutilsTestSupport.py", line 116
    raise self.failureException, \
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulif/rest/tests/alltests.py'...
***   File "./lib/python3.5/site-packages/ulif/rest/tests/alltests.py", line 80
    print 'Working directory: %s' % os.getcwd()
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulif/rest/tests/docutils_difflib.py'...
***   File "./lib/python3.5/site-packages/ulif/rest/tests/docutils_difflib.py", line 430
    print "get_matching_blocks", alo, ahi, blo, bhi
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ulif/rest/tests/package_unittest.py'...
***   File "./lib/python3.5/site-packages/ulif/rest/tests/package_unittest.py", line 38
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ulif/rest/tests/test_directives'...
Listing './lib/python3.5/site-packages/ulif.rest-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
